--- a/public_html/bbs.ejs
+++ b/public_html/bbs.ejs
@@ -7,10 +7,10 @@
 <body>
     <form methid="post">
         <input type="text" name="name">
-        <input type="submmit" value="Post!">
+        <input type="submit" value="Post!">
         <ul>
             <% for (var i = 0; i < posts.length; i++) { %>
-            <li><%= post[i] %></li>
+            <li><%= posts[i] %></li>
             <% } %>
         </ul>
     </form>
