--- a/public_html/bbs.ejs
+++ b/public_html/bbs.ejs
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 </head>
 <body>
-    <form methid="post">
+    <form method="post">
         <input type="text" name="name">
         <input type="submit" value="Post!">
         <ul>
